--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -4,17 +4,17 @@
 		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) and '$(MSBuildRuntimeType)' == 'Full'">$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks>
 		<OutputType>Exe</OutputType>
-		<RootNamespace>BolApp</RootNamespace>
+		<RootNamespace>BolWallet</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
     
 		<!-- Display name -->
-		<ApplicationTitle>BolApp</ApplicationTitle>
+		<ApplicationTitle>BolWallet</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.bolapp</ApplicationId>
+		<ApplicationId>com.companyname.BolWallet</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationVersion>1</ApplicationVersion>
