--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -73,6 +73,7 @@
     <ItemGroup>
         <PackageReference Include="akavache" Version="9.0.1" />
         <PackageReference Include="BolChain.Core" Version="0.0.1-alpha.5" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
         <PackageReference Include="DevExpress.Maui.Editors" Version="22.1.*" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
