--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -81,6 +81,7 @@
         <PackageReference Include="DevExpress.Maui.Editors" Version="22.1.*" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+        <PackageReference Include="Plugin.AudioRecorder" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
