--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -60,6 +60,15 @@
     </ItemGroup>
 
     <ItemGroup>
+        <MauiXaml Update="Controls\ExtendedDatePicker.xaml">
+          <Generator>MSBuild:Compile</Generator>
+        </MauiXaml>
+        <MauiXaml Update="Controls\ExtendedTextEdit.xaml">
+          <Generator>MSBuild:Compile</Generator>
+        </MauiXaml>
+        <MauiXaml Update="Controls\ExtendedComboBox.xaml">
+          <Generator>MSBuild:Compile</Generator>
+        </MauiXaml>
         <MauiXaml Update="Views\App.xaml">
             <SubType>Designer</SubType>
         </MauiXaml>
@@ -75,6 +84,15 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Compile Update="Controls\ExtendedDatePicker.xaml.cs">
+          <DependentUpon>ExtendedDatePicker.xaml</DependentUpon>
+        </Compile>
+        <Compile Update="Controls\ExtendedTextEdit.xaml.cs">
+          <DependentUpon>ExtendedTextEdit.xaml</DependentUpon>
+        </Compile>
+        <Compile Update="Controls\ExtendedComboBox.xaml.cs">
+          <DependentUpon>ExtendedComboBox.xaml</DependentUpon>
+        </Compile>
         <Compile Update="Views\App.xaml.cs">
             <DependentUpon>App.xaml</DependentUpon>
             <SubType>Code</SubType>
@@ -94,7 +112,6 @@
         <PackageReference Include="BolChain.Core" Version="0.0.1-alpha.8" />
         <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
-        <PackageReference Include="DevExpress.Maui.Editors" Version="22.1.*" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
         <PackageReference Include="Neo.VM" Version="2.4.3.1" />
