--- a/BolWallet/appsettings.json
+++ b/BolWallet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "BolSettings": {
-    "RpcEndpoint": "",
-    "Contract": ""
+    "RpcEndpoint": "https://validator-1.demo.bolchain.net:443",
+    "Contract": "032be89207da01ba724a20f567ccc3fdcfeac064"
   }
 }
