--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -81,7 +81,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-
+	  <MauiAsset Update="Resources\Raw\TestAccount.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </MauiAsset>
 	</ItemGroup>
 
     <ItemGroup>
@@ -183,6 +185,7 @@
 
     <ItemGroup>
       <None Remove="appsettings.json" />
+      <None Remove="TestAccount.json" />
       <EmbeddedResource Include="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </EmbeddedResource>
