Implement certifier page with whitelist and certify functionality

--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -99,6 +99,9 @@
 		<MauiXaml Update="Views\BolCommunityPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Views\CertifierPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Views\CertifyPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
