Configure Bolhash rpc url retrieval from appsettings

--- a/BolWallet/appsettings.json
+++ b/BolWallet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "BolSettings": {
     "RpcEndpoint": "https://rpcnode.demo.bolchain.net:443",
-    "Contract": "b385fb98c305c82e35da302fd979eb0450fb03d4"
+    "Contract": ""
   }
 }
