--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -29,19 +29,27 @@
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-        <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+        <!--<GenerateAppInstallerFile>False</GenerateAppInstallerFile>
         <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
         <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
         <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
         <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
         <GenerateTestArtifacts>True</GenerateTestArtifacts>
-        <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-        <PackageCertificateKeyFile>BolWallet_TemporaryKey.pfx</PackageCertificateKeyFile>
+        <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>-->
+        <!--<PackageCertificateKeyFile>BolWallet_TemporaryKey.pfx</PackageCertificateKeyFile>-->
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-android|AnyCPU'">
+    <!--<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-android|AnyCPU'">
       <AndroidPackageFormat>apk</AndroidPackageFormat>
     </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-android33.0|AnyCPU'">
+      <AndroidPackageFormat>apk</AndroidPackageFormat>
+      <AndroidKeyStore>True</AndroidKeyStore>
+      <AndroidSigningStorePass>123456</AndroidSigningStorePass>
+      <AndroidSigningKeyPass>123456</AndroidSigningKeyPass>
+    </PropertyGroup>-->
+
 
     <ItemGroup>
 		<!-- App Icon -->
@@ -70,62 +78,27 @@
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
 
-    <ItemGroup>
-      <AndroidResource Remove="Controls\**" />
-      <AndroidResource Remove="Converters\**" />
-      <Compile Remove="Controls\**" />
-      <Compile Remove="Converters\**" />
-      <Content Remove="Controls\**" />
-      <Content Remove="Converters\**" />
-      <EmbeddedResource Remove="Controls\**" />
-      <EmbeddedResource Remove="Converters\**" />
-      <MauiXaml Remove="Controls\**" />
-      <MauiXaml Remove="Converters\**" />
-      <None Remove="Controls\**" />
-      <None Remove="Converters\**" />
-    </ItemGroup>
 
     <ItemGroup>
-      <Compile Remove="ViewModels\RadialControlViewModel.cs" />
-      <Compile Remove="Views\AccountPage.xaml.cs" />
-      <Compile Remove="Views\BolCommunityPage.xaml.cs" />
-      <Compile Remove="Views\CertifierPage.xaml.cs" />
-      <Compile Remove="Views\CertifyPage.xaml.cs" />
-      <Compile Remove="Views\CreateCodenamePage.xaml.cs" />
-      <Compile Remove="Views\CreateEdiPage.xaml.cs" />
-      <Compile Remove="Views\FinancialTransactionsPage.xaml.cs" />
-      <Compile Remove="Views\GenerateWalletWithPasswordPage.xaml.cs" />
+      <Compile Remove="ViewModels\RegistrationViewModel.cs" />
       <Compile Remove="Views\MainPage.xaml.cs" />
-      <Compile Remove="Views\MainWithAccountPage.xaml.cs" />
-      <Compile Remove="Views\MoveClaimPage.xaml.cs" />
-      <Compile Remove="Views\RegistrationPage.xaml.cs" />
-      <Compile Remove="Views\RetrieveBolPage.xaml.cs" />
-      <Compile Remove="Views\SendBolPage.xaml.cs" />
-      <Compile Remove="Views\UserPage.xaml.cs" />
     </ItemGroup>
 
+
     <ItemGroup>
-      <MauiXaml Remove="Views\AccountPage.xaml" />
-      <MauiXaml Remove="Views\BolCommunityPage.xaml" />
-      <MauiXaml Remove="Views\CertifierPage.xaml" />
-      <MauiXaml Remove="Views\CertifyPage.xaml" />
-      <MauiXaml Remove="Views\CreateCodenamePage.xaml" />
-      <MauiXaml Remove="Views\CreateEdiPage.xaml" />
-      <MauiXaml Remove="Views\FinancialTransactionsPage.xaml" />
-      <MauiXaml Remove="Views\GenerateWalletWithPasswordPage.xaml" />
+      <Content Remove="Pages\FinancialTransactionsPage.razor" />
+    </ItemGroup>
+
+
+    <ItemGroup>
       <MauiXaml Remove="Views\MainPage.xaml" />
-      <MauiXaml Remove="Views\MainWithAccountPage.xaml" />
-      <MauiXaml Remove="Views\MoveClaimPage.xaml" />
-      <MauiXaml Remove="Views\RegistrationPage.xaml" />
-      <MauiXaml Remove="Views\RetrieveBolPage.xaml" />
-      <MauiXaml Remove="Views\SendBolPage.xaml" />
-      <MauiXaml Remove="Views\UserPage.xaml" />
     </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="akavache" Version="9.1.20" />
+		<PackageReference Include="Blazing.Mvvm" Version="1.4.0" />
 		<PackageReference Include="BolChain.Core" Version="0.0.1-alpha.9" />
-		<PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
@@ -161,6 +134,10 @@
 
 	<ItemGroup>
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\neo-vm\neo-vm.csproj" />
 	</ItemGroup>
 
 </Project>
