--- a/BolWallet/appsettings.Development.json
+++ b/BolWallet/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "BolSettings": {
+    "RpcEndpoint": "",
+    "Contract": ""
   }
 }
