Add register as certifier blazor page in bol community actions

--- a/BolWallet/BolWallet.csproj
+++ b/BolWallet/BolWallet.csproj
@@ -126,6 +126,9 @@
 		<MauiXaml Update="Views\MoveClaimPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Views\RegisterAsCertifierPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Views\RetrieveBolPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
